add some css for print version

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" media="print" href="./assets/css/print.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -85,7 +86,7 @@
                         <div class="one-Experience__container">
                             <div class="expericence-title-container">
                                 <h3 class="one-Experience__name">Développeur Web - O'clock</h3>
-                                <i class="date">- Mars 2022</i>
+                                <i class="date">- 2022</i>
                             </div>
                             <p class="one-experience__list">- Développement Back end d'une application Web</p>
                             <p class="one-experience__list">- Equipe de 4 développeurs</p>
