fix print format, add portrait

--- a/index.html
+++ b/index.html
@@ -27,15 +27,42 @@
         </nav>
         <header class="header-container">
             <div class="header__img-container">
+                <div class="header__contact-container">
+                    <p class="header__contact-label">Gurvan Lardeux</p>
+                    <p class="header__contact-label">+33 6 37 15 80 03</p>
+                    <p class="header__contact-label">gurvan.lardeux@gmail.com</p>
+                    <p class="header__contact-label">29000, Quimper</p>
+                    <p class="header__contact-label">https://lardeuxgurvan.github.io/</p>
+                </div>
                 <div class="header__title-container animate__animated animate__backInLeft">
                     <h3 class="header__name">Bonjour, Je suis Gurvan Lardeux</h3>
                     <h1 class="header__title">Developpeur Web Full Stack</h1>
                     <h2 class="header__subtitle">Javascript, Spécialisation Data/API</h2>
                 </div>
-                <img class="header__img" src="https://cdn3.iconfinder.com/data/icons/web-and-seo-11-1/65/549-512.png"
-                    alt="">
+                <!-- <img class="header__img" src="https://cdn3.iconfinder.com/data/icons/web-and-seo-11-1/65/549-512.png" -->
+                    <!-- alt=""> -->
+                    <img class="header__img" src="./img/4.jpg"
+                    alt="picture of Gurvan Lardeux">
+                    <div class="header-skills__container print">
+                        <div class="header-skill header-skills__front-end">
+                            <img class="header-skills__img" src="https://img.icons8.com/ios/100/000000/javascript--v2.png" />
+                            front-end
+                        </div>
+                        <div class="header-skill header-skills__back-end">
+                            <img class="header-skills__img" src="https://img.icons8.com/fluency/96/000000/node-js.png" />
+                            back-end
+                        </div>
+                        <!-- <div class="header-skill header-skills__responsive"> -->
+                        <!-- <img src="https://img.icons8.com/offices/80/000000/media-queries.png"/> -->
+                        <!-- responsive -->
+                        <!-- </div> -->
+                        <div class="header-skill header-skills__english">
+                            <img class="header-skills__img" src="https://img.icons8.com/ios-filled/100/000000/geography.png" />
+                            anglais
+                        </div>
+                    </div>
             </div>
-            <div class="header-skills__container">
+            <div class="header-skills__container site">
                 <div class="header-skill header-skills__front-end">
                     <img class="header-skills__img" src="https://img.icons8.com/ios/100/000000/javascript--v2.png" />
                     front-end
@@ -44,10 +71,6 @@
                     <img class="header-skills__img" src="https://img.icons8.com/fluency/96/000000/node-js.png" />
                     back-end
                 </div>
-                <!-- <div class="header-skill header-skills__responsive"> -->
-                <!-- <img src="https://img.icons8.com/offices/80/000000/media-queries.png"/> -->
-                <!-- responsive -->
-                <!-- </div> -->
                 <div class="header-skill header-skills__english">
                     <img class="header-skills__img" src="https://img.icons8.com/ios-filled/100/000000/geography.png" />
                     anglais
@@ -68,7 +91,7 @@
                                 <h3 class="one-formation__name">O'clock</h3>
                                 <i class="date">- Septembre 2021</i>
                             </div>
-                            <p class="one-formation__description">formation en téléprésentiel labelisée grande école</p>
+                            <p class="one-formation__description">Formation en téléprésentiel labelisée grande école</p>
                             <p>- socle HTML5/CSS/Javascript</p>
                             <p>- Spécialisation API/Data</p>
                         </div>
@@ -101,7 +124,7 @@
                             <p class="one-experience__list">- Vidéo et clips musicaux</p>
                             <p class="one-experience__list">- Composition, enregistrement, mixage/mastering</p>
                             <p class="one-experience__list">- Realisation de musiques de commandes ou personnelles et
-                                de 4 EP/LP sous les format vinyle, CD et cassette</p>
+                                de 4 EP/LP sous les formats vinyle, CD et cassette</p>
                             <p class="one-experience__list">- Sonorisations et plus de 60 concerts en tant que
                                 guitariste</p>
                         </div>
@@ -110,7 +133,7 @@
                                 <h3 class="one-Experience__name">Facteur à la Poste</h3>
                                 <i class="date">- 2018 - 2020</i>
                             </div>
-                            <p class="one-experience__list">- Poste de Pont Croix, Audierne et Quimper</p>
+                            <p class="one-experience__list">- Bureau de Pont Croix, Audierne et Quimper</p>
 
                         </div>
                     </div>
