add skills container

--- a/index.html
+++ b/index.html
@@ -40,27 +40,28 @@
                     <h2 class="header__subtitle">Javascript, Spécialisation Data/API</h2>
                 </div>
                 <!-- <img class="header__img" src="https://cdn3.iconfinder.com/data/icons/web-and-seo-11-1/65/549-512.png" -->
-                    <!-- alt=""> -->
-                    <img class="header__img" src="./img/4.jpg"
-                    alt="picture of Gurvan Lardeux">
-                    <div class="header-skills__container print">
-                        <div class="header-skill header-skills__front-end">
-                            <img class="header-skills__img" src="https://img.icons8.com/ios/100/000000/javascript--v2.png" />
-                            front-end
-                        </div>
-                        <div class="header-skill header-skills__back-end">
-                            <img class="header-skills__img" src="https://img.icons8.com/fluency/96/000000/node-js.png" />
-                            back-end
-                        </div>
-                        <!-- <div class="header-skill header-skills__responsive"> -->
-                        <!-- <img src="https://img.icons8.com/offices/80/000000/media-queries.png"/> -->
-                        <!-- responsive -->
-                        <!-- </div> -->
-                        <div class="header-skill header-skills__english">
-                            <img class="header-skills__img" src="https://img.icons8.com/ios-filled/100/000000/geography.png" />
-                            anglais
-                        </div>
+                <!-- alt=""> -->
+                <img class="header__img" src="./img/4.jpg" alt="picture of Gurvan Lardeux">
+                <div class="header-skills__container print">
+                    <div class="header-skill header-skills__front-end">
+                        <img class="header-skills__img"
+                            src="https://img.icons8.com/ios/100/000000/javascript--v2.png" />
+                        front-end
                     </div>
+                    <div class="header-skill header-skills__back-end">
+                        <img class="header-skills__img" src="https://img.icons8.com/fluency/96/000000/backend-development.png" />
+                        back-end
+                    </div>
+                    <!-- <div class="header-skill header-skills__responsive"> -->
+                    <!-- <img src="https://img.icons8.com/offices/80/000000/media-queries.png"/> -->
+                    <!-- responsive -->
+                    <!-- </div> -->
+                    <div class="header-skill header-skills__english">
+                        <img class="header-skills__img"
+                            src="https://img.icons8.com/ios-filled/100/000000/geography.png" />
+                        anglais
+                    </div>
+                </div>
             </div>
             <div class="header-skills__container site">
                 <div class="header-skill header-skills__front-end">
@@ -68,7 +69,7 @@
                     front-end
                 </div>
                 <div class="header-skill header-skills__back-end">
-                    <img class="header-skills__img" src="https://img.icons8.com/fluency/96/000000/node-js.png" />
+                    <img class="header-skills__img" src="https://img.icons8.com/fluency/96/000000/backend-development.png" />
                     back-end
                 </div>
                 <div class="header-skill header-skills__english">
@@ -138,6 +139,58 @@
                         </div>
                     </div>
                 </section>
+            </div>
+            <div class="dev-container">
+                <h1 class="dev-title title">Compétences</h1>
+                <div class="skills-main-container">
+                    <article class="skills__container">
+                        <div class="skills__img-container">
+                            <h3 class="skill__title">Intégration</h3>
+                            <img src="https://img.icons8.com/fluency/96/000000/source-code.png" />
+                        </div>
+                        <div class="skills__label-container">
+                            <ul>
+                                <li><strong>HTML5</strong> balises sémantiques</li>
+                                <li>CSS Organisation BEM ou framework classLess</li>
+                                <li>Javascript pour une navigation souple et dynamique</li>
+                                <li>EJS pour générer du html avec JS</li>
+                            </ul>
+                        </div>
+                    </article>
+                    <article class="skills__container">
+                        <div class="skills__img-container">
+                            <h3 class="skill__title">Node.JS</h3>
+                            <img src="https://img.icons8.com/fluency/96/000000/node-js.png" />
+                        </div>
+                        <div class="skills__label-container">
+                            <ul>
+                                <li>Mise en place d' une infrastructure Express</li>
+                                <li>Gestion d'ORM comme Sequelize</li>
+                                <li>Developpement d'API</li>
+                                <li>Gestion des packages npm</li>
+                                <li>Mise en place des variables d'environnement</li>
+                            </ul>
+                        </div>
+                    </article>
+                    <article class="skills__container">
+                        <div class="skills__img-container">
+                            <h3 class="skill__title">Back-end</h3>
+                            <img src="https://img.icons8.com/fluency/96/000000/backend-development.png" />
+                        </div>
+                        <div class="skills__label-container">
+
+                        </div>
+                    </article>
+                    <article class="skills__container">
+                        <div class="skills__img-container">
+                            <h3 class="skill__title">Data</h3>
+                            <img src="https://img.icons8.com/fluency/96/000000/database.png" />
+                        </div>
+                        <div class="skills__label-container">
+
+                        </div>
+                    </article>
+                </div>
             </div>
         </main>
     </div>
