fix paragraph style

--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
             <div class="header__img-container">
                 <div class="header__contact-container">
                     <p class="header__contact-label">Gurvan Lardeux</p>
-                    <p class="header__contact-label">+33 6 37 15 80 03</p>
                     <p class="header__contact-label">gurvan.lardeux@gmail.com</p>
                     <p class="header__contact-label">29000, Quimper</p>
                     <p class="header__contact-label">https://lardeuxgurvan.github.io/</p>
@@ -99,11 +98,19 @@
                         <div class="one-formation__container">
                             <div class="expericence-title-container">
                                 <h3 class="one-formation__name">O'clock</h3>
-                                <i class="date">- Septembre 2021</i>
+                                <i class="date">- Septembre 2021 à Mars 2022</i>
                             </div>
                             <p class="one-formation__description">Formation en téléprésentiel labelisée grande école</p>
-                            <p>- socle HTML5/CSS/Javascript</p>
+                            <p>- Socle HTML5/CSS/Javascript</p>
                             <p>- Spécialisation API/Data</p>
+                        </div>
+                        <div class="one-formation__container">
+                            <div class="expericence-title-container">
+                                <h3 class="one-formation__name">IUT Quimper</h3>
+                                <i class="date">- 2009</i>
+                            </div>
+                            <p class="one-formation__description">1ère année Génie biologique</p>
+                            <p>- Industrie agroalimentaire et biologique</p>
                         </div>
                         <div class="one-formation__container">
                             <div class="expericence-title-container">
@@ -118,32 +125,31 @@
                     <div class="Experiences__inside-container">
                         <div class="one-Experience__container">
                             <div class="expericence-title-container">
-                                <h3 class="one-Experience__name">Développeur Web - O'clock</h3>
+                                <h3 class="one-formation__name">Développeur Web - O'clock</h3>
                                 <i class="date">- 2022</i>
                             </div>
-                            <p class="one-experience__list">- Développement Back end d'une application Web</p>
+                            <p class="one-formation__description">Développement Back-end d'une application Web</p>
                             <p class="one-experience__list">- Equipe de 4 développeurs</p>
                             <p class="one-experience__list">- Sur 4 semaines</p>
 
                         </div>
                         <div class="one-Experience__container">
                             <div class="expericence-title-container">
-                                <h3 class="one-Experience__name">Musicien / Ingénieur son</h3>
-                                <i class="date">- 2012 - 2018</i>
+                                <h3 class="one-formation__name">Musicien / Ingénieur son</h3>
+                                <i class="date">- 2010 - 2018</i>
                             </div>
-                            <p class="one-experience__list">- Vidéo et clips musicaux</p>
                             <p class="one-experience__list">- Composition, enregistrement, mixage/mastering</p>
-                            <p class="one-experience__list">- Realisation de musiques de commandes ou personnelles et
-                                de 4 EP/LP sous les formats vinyle, CD et cassette</p>
+                            <p class="one-experience__list">- 4 EP/LP sous les formats vinyle, CD et cassette</p>
                             <p class="one-experience__list">- Sonorisations et plus de 60 concerts en tant que
                                 guitariste</p>
+                            <p class="one-experience__list">- Vidéo et clips musicaux</p>
                         </div>
                         <div class="one-Experience__container">
                             <div class="expericence-title-container">
-                                <h3 class="one-Experience__name">Facteur à la Poste</h3>
+                                <h3 class="one-formation__name">Facteur à la Poste</h3>
                                 <i class="date">- 2018 - 2020</i>
                             </div>
-                            <p class="one-experience__list">- Bureau de Pont Croix, Audierne et Quimper</p>
+                            <p class="one-formation__description">Bureau de Pont Croix, Audierne et Quimper</p>
 
                         </div>
                     </div>
@@ -152,21 +158,21 @@
             <div class="dev-container" id="compétences">
                 <h1 class="dev-title title">Compétences</h1>
                 <div class="skills-main-container">
-                    <article class="skills__container">
+                    <article class="skills__container animate__animated animate__backInLeft">
                         <div class="skills__img-container">
                             <h3 class="skill__title">Intégration</h3>
                             <img src="https://img.icons8.com/fluency/96/000000/source-code.png" />
                         </div>
                         <div class="skills__label-container">
                             <ul>
-                                <li><strong>HTML5</strong> - Utilisation des balises sémantiques pour aider au référencement naturel</li>
-                                <li><strong>CSS</strong> - Organisation du nommage des classes avec méthodologie BEM ou utilisation de frameworks classLess</li>
+                                <li><strong>HTML5</strong> - Utilisation de balises sémantiques pour aider au référencement naturel</li>
+                                <li><strong>CSS</strong> - Nommage des classes avec méthodologie BEM ou utilisation de frameworks classLess</li>
                                 <li><strong>Javascript</strong> - Pour une navigation souple et dynamique</li>
                                 <li><strong>Views Engine</strong> EJS, Pug ...</li>
                             </ul>
                         </div>
                     </article>
-                    <article class="skills__container">
+                    <article class="skills__container animate__animated animate__backInRight">
                         <div class="skills__img-container">
                             <h3 class="skill__title">Node.JS</h3>
                             <img src="https://img.icons8.com/fluency/96/000000/node-js.png" />
@@ -174,14 +180,13 @@
                         <div class="skills__label-container">
                             <ul>
                                 <li><strong>Express</strong> - Utilisation de l'infrastructure express pour creer des applications Web/Web mobile et API</li>
-                                <li><strong>API CRUD</strong></li>
                                 <li><strong>TDD</strong> - Mise en place de tests unitaires</li>
-                                <li><strong>npm</strong> : Gestion de packages</li>
+                                <li><strong>Heroku</strong> - Déploiment d'applications</li>
                                 <li><strong>MVC</strong> - Mise en place d'architectures Model-View-Controller</li>
                             </ul>
                         </div>
                     </article>
-                    <article class="skills__container">
+                    <article class="skills__container animate__animated animate__backInLeft">
                         <div class="skills__img-container">
                             <h3 class="skill__title">Data</h3>
                             <img src="https://img.icons8.com/fluency/96/000000/database.png" />
@@ -189,13 +194,13 @@
                         <div class="skills__label-container">
                             <ul>
                                 <li><strong>SQL</strong></li>
-                                <li><strong>PostgreSQL, SQLite, MongoDB</strong> - Utilisation de systèmes de gestion de base de données</li>
+                                <li><strong>PostgreSQL, SQLite, MongoDB</strong> - Systèmes de gestion de base de données</li>
                                 <li><strong>Datamapper</strong> / <strong>Active Record</strong> - Utilisations de différents patrons de conception suivant le contexte</li>
                                 <li><strong>Sequelize</strong> - Utilisation d'ORM en cas de déploiment rapide de base de donnée</li>
                             </ul>
                         </div>
                     </article>
-                    <article class="skills__container">
+                    <article class="skills__container animate__animated animate__backInRight">
                         <div class="skills__img-container">
                             <h3 class="skill__title">Environnement</h3>
                             <img src="https://img.icons8.com/fluency/96/000000/backend-development.png" />
@@ -204,7 +209,7 @@
                             <li><strong>Visual Studio Code</strong></li>
                             <li><strong>Linux</strong> / Wndows</li>
                             <li>Eslint AirBNB</li>
-                            <li>Gestion des variables d'environnement</li>
+                            <li>Git et github</li>
                             <li>Maitrise de l'<strong>anglais</strong></li>
                         </div>
                     </article>
@@ -213,14 +218,10 @@
         </main>
         <footer class="footer" id="contact">
             <div class="contact-container">
-                <p class="header__contact-label">Gurvan Lardeux</p>
-                <p class="header__contact-label">+33 6 37 15 80 03</p>
-                <p class="header__contact-label">gurvan.lardeux@gmail.com</p>
-                <p class="header__contact-label">29000, Quimper</p>
-                <p class="header__contact-label">https://lardeuxgurvan.github.io/</p>
+                <a href="mailto:gurvan.lardeux@gmail.com" class="footer_mail-button">gurvan.lardeux@gmail.com</a>
             </div>
             <div class="fotter__print-container">
-                <button class="footer__print-button" id="print">Enregistrer le CV en PDF / Imprimer</button>
+                <a class="footer__print-button" id="print">Télécharger le CV en PDF / Imprimer</a>
             </div>
         </footer>
     </div>
