--- a/index.html
+++ b/index.html
@@ -10,10 +10,15 @@
     <link rel="stylesheet" media="print" href="./assets/css/print.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link
         href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/img/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="/img/favicon_io/site.webmanifest">
     <script src="./assets/js/print.js"></script>
 
 
@@ -21,9 +26,26 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container" data-aos="fade-in">
+        <aside class="social-network__container">
+            <div class="social-network__img-container">
+                <a href="https://github.com/LardeuxGurvan">
+                    <img src="https://img.icons8.com/material-sharp/48/000000/github.png" alt="github logo" />
+                </a>
+            </div>
+            <div class="social-network__img-container">
+                <a href="https://linkedin.com/in/gurvan-lardeux">
+                    <img src="https://img.icons8.com/color/50/000000/linkedin.png" alt="linkedin logo" />
+                </a>
+            </div>
+            <div class="social-network__img-container">
+                <a href="https://twitter.com/Daligrog">
+                    <img src="https://img.icons8.com/color/50/000000/twitter--v1.png" alt="twitter logo">
+                </a>
+            </div>
+        </aside>
         <nav class="navBar-container">
-            <a class="navBar-button" href="#home">Home</a>
+            <button class="navBar-button" onclick="window.location.href='#home'">Accueil</button>
             <button class="navBar-button" onclick="window.location.href='#experiences'">Experiences</button>
             <button class="navBar-button" onclick="window.location.href='#compétences'">Compétences</button>
             <button class="navBar-button" onclick="window.location.href='#contact'">Contact</button>
@@ -36,7 +58,7 @@
                     <p class="header__contact-label">29000, Quimper</p>
                     <p class="header__contact-label">https://lardeuxgurvan.github.io/</p>
                 </div>
-                <div class="header__title-container animate__animated animate__backInLeft">
+                <div class="header__title-container" data-aos="fade-right" data-aos-duration="1300">
                     <h3 class="header__name">Bonjour, Je suis Gurvan Lardeux</h3>
                     <h1 class="header__title">Developpeur Web Full Stack</h1>
                     <h2 class="header__subtitle">Javascript, Spécialisation Data/API</h2>
@@ -56,7 +78,8 @@
                         back-end
                     </div>
                     <div class="header-skill header-skills__responsive">
-                        <img src="https://img.icons8.com/offices/80/000000/media-queries.png" />
+                        <img class="header-skills__img"
+                            src="https://img.icons8.com/external-dreamstale-green-shadow-dreamstale/64/000000/external-responsive-seo-media-dreamstale-green-shadow-dreamstale.png" />
                         Responsive
                     </div>
                     <!-- <div class="header-skill header-skills__english">
@@ -67,17 +90,18 @@
                 </div>
             </div>
             <div class="header-skills__container site">
-                <div class="header-skill header-skills__front-end">
+                <div class="header-skill header-skills__front-end" data-aos="fade-up" data-aos-duration="1500">
                     <img class="header-skills__img" src="https://img.icons8.com/ios/100/000000/javascript--v2.png" />
                     front-end
                 </div>
-                <div class="header-skill header-skills__back-end">
+                <div class="header-skill header-skills__back-end" data-aos="fade-up" data-aos-duration="1500">
                     <img class="header-skills__img"
                         src="https://img.icons8.com/fluency/96/000000/backend-development.png" />
                     back-end
                 </div>
-                <div class="header-skill header-skills__responsive">
-                    <img src="https://img.icons8.com/offices/80/000000/media-queries.png" />
+                <div class="header-skill header-skills__responsive" data-aos="fade-up" data-aos-duration="1500">
+                    <img class="header-skills__img"
+                        src="https://img.icons8.com/external-dreamstale-green-shadow-dreamstale/64/000000/external-responsive-seo-media-dreamstale-green-shadow-dreamstale.png" />
                     Responsive
                 </div>
                 <!-- <div class="header-skill header-skills__english">
@@ -85,9 +109,9 @@
                     anglais
                 </div> -->
             </div>
-            <div class="header-situation__container animate__animated animate__backInRight">
-                <h3 class="header-situation__label">Actuellement à la recherche d'un stage dans le finistère pour
-                    approfondir mes conaissances</h3>
+            <div class="header-situation__container" data-aos="fade-in">
+                <h3 class="header-situation__label">Jeune développeur Quimperois de 33 ans à la recherche de stage dans
+                    le finistère</h3>
             </div>
         </header>
         <main>
@@ -149,7 +173,7 @@
                                 <h3 class="one-formation__name">Facteur à la Poste</h3>
                                 <i class="date">- 2018 - 2020</i>
                             </div>
-                            <p class="one-formation__description">Bureau de Pont Croix, Audierne et Quimper</p>
+                            <p class="one-formation__description">Bureaux de Pont Croix, Audierne et Quimper</p>
 
                         </div>
                     </div>
@@ -158,35 +182,38 @@
             <div class="dev-container" id="compétences">
                 <h1 class="dev-title title">Compétences</h1>
                 <div class="skills-main-container">
-                    <article class="skills__container animate__animated animate__backInLeft">
+                    <article class="skills__container" data-aos="zoom-in-left">
                         <div class="skills__img-container">
                             <h3 class="skill__title">Intégration</h3>
                             <img src="https://img.icons8.com/fluency/96/000000/source-code.png" />
                         </div>
                         <div class="skills__label-container">
                             <ul>
-                                <li><strong>HTML5</strong> - Utilisation de balises sémantiques pour aider au référencement naturel</li>
-                                <li><strong>CSS</strong> - Nommage des classes avec méthodologie BEM ou utilisation de frameworks classLess</li>
+                                <li><strong>HTML5</strong> - Utilisation de balises sémantiques pour aider au
+                                    référencement naturel</li>
+                                <li><strong>CSS</strong> - Nommage des classes avec méthodologie BEM ou utilisation de
+                                    frameworks classLess</li>
                                 <li><strong>Javascript</strong> - Pour une navigation souple et dynamique</li>
                                 <li><strong>Views Engine</strong> EJS, Pug ...</li>
                             </ul>
                         </div>
                     </article>
-                    <article class="skills__container animate__animated animate__backInRight">
+                    <article class="skills__container" data-aos="zoom-in-right">
                         <div class="skills__img-container">
                             <h3 class="skill__title">Node.JS</h3>
                             <img src="https://img.icons8.com/fluency/96/000000/node-js.png" />
                         </div>
                         <div class="skills__label-container">
                             <ul>
-                                <li><strong>Express</strong> - Utilisation de l'infrastructure express pour creer des applications Web/Web mobile et API</li>
+                                <li><strong>Express</strong> - Utilisation de l'infrastructure express pour creer des
+                                    applications Web/Web mobile et API</li>
                                 <li><strong>TDD</strong> - Mise en place de tests unitaires</li>
-                                <li><strong>Heroku</strong> - Déploiment d'applications</li>
+                                <li><strong>Heroku</strong> - Déploiement d'applications</li>
                                 <li><strong>MVC</strong> - Mise en place d'architectures Model-View-Controller</li>
                             </ul>
                         </div>
                     </article>
-                    <article class="skills__container animate__animated animate__backInLeft">
+                    <article class="skills__container" data-aos="zoom-in-right">
                         <div class="skills__img-container">
                             <h3 class="skill__title">Data</h3>
                             <img src="https://img.icons8.com/fluency/96/000000/database.png" />
@@ -194,37 +221,137 @@
                         <div class="skills__label-container">
                             <ul>
                                 <li><strong>SQL</strong></li>
-                                <li><strong>PostgreSQL, SQLite, MongoDB</strong> - Systèmes de gestion de base de données</li>
-                                <li><strong>Datamapper</strong> / <strong>Active Record</strong> - Utilisations de différents patrons de conception suivant le contexte</li>
-                                <li><strong>Sequelize</strong> - Utilisation d'ORM en cas de déploiment rapide de base de donnée</li>
+                                <li><strong>PostgreSQL, SQLite, MongoDB</strong> - Systèmes de gestion de bases de
+                                    données</li>
+                                <li><strong>Datamapper</strong> / <strong>Active Record</strong> - Utilisations de
+                                    différents patrons de conception suivant le contexte</li>
+                                <li><strong>Sequelize</strong> - Utilisation d'ORM en cas de déploiement rapide de bases
+                                    de donnée</li>
                             </ul>
                         </div>
                     </article>
-                    <article class="skills__container animate__animated animate__backInRight">
+                    <article class="skills__container" data-aos="zoom-in-left">
                         <div class="skills__img-container">
                             <h3 class="skill__title">Environnement</h3>
-                            <img src="https://img.icons8.com/fluency/96/000000/backend-development.png" />
+                            <img src="https://img.icons8.com/color/96/000000/cafe--v1.png" />
                         </div>
                         <div class="skills__label-container">
                             <li><strong>Visual Studio Code</strong></li>
-                            <li><strong>Linux</strong> / Wndows</li>
+                            <li><strong>Linux</strong> / Windows</li>
                             <li>Eslint AirBNB</li>
                             <li>Git et github</li>
-                            <li>Maitrise de l'<strong>anglais</strong></li>
+                            <li><strong>Anglais</strong></li>
                         </div>
                     </article>
+                </div>
+                <div class="skills-main-container--print">
+                    <div class="skills__container--print">
+                        <article class="skill__container--print">
+                            <div class="skills__img-container">
+                                <img class="skill__img--print"
+                                    src="https://img.icons8.com/fluency/96/000000/source-code.png" />
+                                <h3 class="skill__title">Intégration</h3>
+
+                            </div>
+                            <div class="skills__label-container">
+                                <ul>
+                                    <li>HTML5</li>
+                                    <li>CSS</li>
+                                    <li>Javascript</li>
+                                    <li>EJS, Pug</li>
+                                </ul>
+                            </div>
+                        </article>
+                        <article class="skill__container--print">
+                            <div class="skills__img-container">
+                                <img class="skill__img--print"
+                                    src="https://img.icons8.com/fluency/96/000000/node-js.png" />
+                                <h3 class="skill__title">Node.JS</h3>
+
+                            </div>
+                            <div class="skills__label-container">
+                                <ul>
+                                    <li>Express</li>
+                                    <li>Tests unitaires</li>
+                                    <li>Heroku</li>
+                                    <li>MVC</li>
+                                </ul>
+                            </div>
+                        </article>
+                        <article class="skill__container--print">
+                            <div class="skills__img-container">
+                                <img class="skill__img--print"
+                                    src="https://img.icons8.com/fluency/96/000000/database.png" />
+                                <h3 class="skill__title">Data</h3>
+
+                            </div>
+                            <div class="skills__label-container">
+                                <ul>
+                                    <li>SQL</li>
+                                    <li>PostgreSQL, SQLite</li>
+                                    <li>Datamapper, AR</li>
+                                    <li>Sequelize</li>
+                                </ul>
+                            </div>
+                        </article>
+                        <article class="skill__container--print">
+                            <div class="skills__img-container">
+                                <img class="skill__img--print"
+                                    src="https://img.icons8.com/color/96/000000/cafe--v1.png" />
+                                <h3 class="skill__title">Environnement</h3>
+
+                            </div>
+                            <div class="skills__label-container">
+                                <ul>
+                                    <li>Visual Studio Code</li>
+                                    <li>Linux / Windows</li>
+                                    <li>Eslint AirBNB</li>
+                                    <li>Git/github</li>
+                                    <li>Anglais</li>
+                                </ul>
+                            </div>
+                        </article>
+                    </div>
                 </div>
             </div>
         </main>
         <footer class="footer" id="contact">
-            <div class="contact-container">
-                <a href="mailto:gurvan.lardeux@gmail.com" class="footer_mail-button">gurvan.lardeux@gmail.com</a>
+            <div class="footer__contact-container">
+                <div class="contact-container">
+                    <a href="mailto:gurvan.lardeux@gmail.com">
+                        <button class="navBar-button">gurvan.lardeux@gmail.com</button>
+                    </a>
+                </div>
+                <div class="fotter__print-container">
+                    <button class="navBar-button" id="print">Télécharger le CV PDF</button>
+                </div>
             </div>
-            <div class="fotter__print-container">
-                <a class="footer__print-button" id="print">Télécharger le CV en PDF / Imprimer</a>
+            <aside class="footer-social-network__container">
+                <div class="social-network__img-container">
+                    <a href="https://github.com/LardeuxGurvan">
+                        <img src="https://img.icons8.com/material-sharp/48/000000/github.png" alt="github logo" />
+                    </a>
+                </div>
+                <div class="social-network__img-container">
+                    <a href="https://linkedin.com/in/gurvan-lardeux">
+                        <img src="https://img.icons8.com/color/50/000000/linkedin.png" alt="linkedin logo" />
+                    </a>
+                </div>
+                <div class="social-network__img-container">
+                    <a href="https://twitter.com/Daligrog">
+                        <img src="https://img.icons8.com/color/50/000000/twitter--v1.png" alt="twitter logo">
+                    </a>
+                </div>
+            </aside>
+            <div class="footer__legal-mentions">
+                Icones utilisés: <a href="https://icons8.com/icon">Icons8</a>
             </div>
         </footer>
     </div>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 
 </html>
