fix animation on skills boxes - smartphone

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             <div class="dev-container" id="compétences">
                 <h1 class="dev-title title">Compétences</h1>
                 <div class="skills-main-container">
-                    <article class="skills__container" data-aos="zoom-in-left">
+                    <article class="skills__container" data-aos="zoom-in-up">
                         <div class="skills__img-container">
                             <h3 class="skill__title">Intégration</h3>
                             <img src="https://img.icons8.com/fluency/96/000000/source-code.png" />
@@ -198,7 +198,7 @@
                             </ul>
                         </div>
                     </article>
-                    <article class="skills__container" data-aos="zoom-in-right">
+                    <article class="skills__container" data-aos="zoom-in-up">
                         <div class="skills__img-container">
                             <h3 class="skill__title">Node.JS</h3>
                             <img src="https://img.icons8.com/fluency/96/000000/node-js.png" />
@@ -213,7 +213,7 @@
                             </ul>
                         </div>
                     </article>
-                    <article class="skills__container" data-aos="zoom-in-right">
+                    <article class="skills__container" data-aos="zoom-in-up">
                         <div class="skills__img-container">
                             <h3 class="skill__title">Data</h3>
                             <img src="https://img.icons8.com/fluency/96/000000/database.png" />
@@ -230,7 +230,7 @@
                             </ul>
                         </div>
                     </article>
-                    <article class="skills__container" data-aos="zoom-in-left">
+                    <article class="skills__container" data-aos="zoom-in-up">
                         <div class="skills__img-container">
                             <h3 class="skill__title">Environnement</h3>
                             <img src="https://img.icons8.com/color/96/000000/cafe--v1.png" />
@@ -274,7 +274,7 @@
                                     <li>Express</li>
                                     <li>Tests unitaires</li>
                                     <li>Heroku</li>
-                                    <li>MVC</li>
+                                    <li>API rest</li>
                                 </ul>
                             </div>
                         </article>
@@ -288,7 +288,7 @@
                             <div class="skills__label-container">
                                 <ul>
                                     <li>SQL</li>
-                                    <li>PostgreSQL, SQLite</li>
+                                    <li>PostgreSQL, MongoDB</li>
                                     <li>Datamapper, AR</li>
                                     <li>Sequelize</li>
                                 </ul>
