--- a/index.html
+++ b/index.html
@@ -209,6 +209,7 @@
                                     applications Web/Web mobile et API</li>
                                 <li><strong>TDD</strong> - Mise en place de tests unitaires</li>
                                 <li><strong>Heroku</strong> - Déploiement d'applications</li>
+                                <li><strong>Express-redis-cache</strong> - Gestion de mémoire cache</li>
                                 <li><strong>MVC</strong> - Mise en place d'architectures Model-View-Controller</li>
                             </ul>
                         </div>
@@ -220,10 +221,12 @@
                         </div>
                         <div class="skills__label-container">
                             <ul>
-                                <li><strong>SQL</strong></li>
-                                <li><strong>PostgreSQL, SQLite, MongoDB</strong> - Systèmes de gestion de bases de
+                                <li><strong>SQL</strong> - Language de communication avec une base de donnée </li>
+                                <li><strong>PostgreSQL, SQLite, MongoDB, Redis</strong> - Systèmes de gestion de bases
+                                    de
                                     données</li>
-                                <li><strong>Datamapper</strong> / <strong>Active Record</strong> - Utilisations de
+                                <li><strong>Datamapper</strong> / <strong>Active Record</strong> /
+                                    <strong>GraphQL</strong> - Utilisations de
                                     différents patrons de conception suivant le contexte</li>
                                 <li><strong>Sequelize</strong> - Utilisation d'ORM en cas de déploiement rapide de bases
                                     de donnée</li>
@@ -288,8 +291,8 @@
                             <div class="skills__label-container">
                                 <ul>
                                     <li>SQL</li>
-                                    <li>PostgreSQL, MongoDB</li>
-                                    <li>Datamapper, AR</li>
+                                    <li>PostgreSQL, MongoDB, Redis</li>
+                                    <li>Datamapper, AR, GraphQL</li>
                                     <li>Sequelize</li>
                                 </ul>
                             </div>
